--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "qs": "^6.9.4",
     "random": "^2.2.0",
     "saasify-client": "^1.20.0",
+    "sequelize": "^5.21.13",
     "shortid": "^2.2.15",
+    "sqlite3": "^4.2.0",
     "tildify": "^2.0.0",
     "twitter-lite": "^0.13.0",
     "update-notifier": "^4.1.0",
