test: add tests for sequelize models
fix eslint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "prettier/standard"
   ],
   "env": {
-    "node": true
+    "node": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaVersion": 2020
