--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "docs": "update-markdown-usage",
     "test": "run-s test:*",
     "test:lint": "eslint .",
-    "test:prettier": "prettier '**/*.js' --check"
+    "test:prettier": "prettier '**/*.js' --check",
+    "test:tests": "jest --runInBand"
   },
   "dependencies": {
     "btoa": "^1.2.1",
@@ -70,6 +71,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1"
